Wrap division in calc to fix warning

--- a/src/scss/custom/_ghost.scss
+++ b/src/scss/custom/_ghost.scss
@@ -6,7 +6,7 @@
 }
 
 .ghost-sm {
-  min-height: $ghost-base-height / 1.8;
+  min-height: calc($ghost-base-height / 1.8);
 }
 
 .ghost-lg {
